# codewars

./: .gitignore
c/: .gitignore  .sums_of_perfect_squares.c.swo  .sums_of_perfect_squares.c.swp  CMakeLists.txt  adding_big_numbers.c  alphanumeric.c  buying_a_car.c  camel_case.c  count_the_smiley_faces.c  create_phone_number.c  decode_the_morse_code.c  detect_pangram.c  directions_reduction.c  disemvowel_troll.c  divide_integers_as_strings.c  duplicate_encoder.c  echo  find_the_divisors.c  human_readable_time.c  is_a_number_prime.c  isograms.c  make_the_deadfish_swim.c  maskify.c  number_of_trailing_zeros_of_n.c  playground.c  playing-with-digits.c  primes-in-numbers.c  rectangle_rotation.c  score.c  sort_binary_tree_by_levels.c  sort_biniary_tree_by_levels.c  square_matrix_multiplication.c  string_incrementer.c  sums_of_perfect_squares.c  tribonacci_sequence.c  two_sum.c  which_are_in.c  your_order_please  your_order_please.c
clojure/: calculate_string_rotation.clj  equal_sides_array.clj  form_minimum.clj  phone_directory.clj  recreation_one.clj  schrödinger_boolean.clj  speed_control.clj  sum_consecutives.clj  tank_truck.clj  twisted_sum.clj
cpp/: a.out  countDivisor.cpp  findOdd.cpp  leapYears.cpp  longestPalindrome.cpp  mexicanWave.cpp  missingTerm.cpp  testing123.cpp
csharp/: Multiples3And5.cs  NthSeries.cs  NumberInExpandedForm.cs
forth/: functions-of-integers-on-Cartesian-plane.fth
fsharp/: ToCamelCase.fsx
haskell/: BackspacesInString.hs  BreakCamelCase.hs  BuildTower.hs  ConsecutiveStrings.hs  DeodorantEvaporator.hs  FindReverseNumber.hs  Fixit.hs  (+22 more)
(+83 files in other folders)
